# svitlo

./: .gitignore  CMakeLists.txt  main.cpp
all/: CMakeLists.txt
include/: application.h  circle.h  data-fetching-strategy.h  data-loading-strategy.h  data-processor.h  database-manager.h  electricity-data.h  input-handler.h  offline-fetching-strategy.h  offline-loading-strategy.h  online-fetching-strategy.h  online-loading-strategy.h  periodic-updater.h  saved-user-info-manager.h  shutdown-circle.h  shutdown-data.h  shutdown-info.h  state-manager.h  ui-manager.h  user-record-manager.h  utility.h
include/svitlo/: consumer.h  data-fetcher.h  database-manager.h  electricity-data.h  json-parser.h
libs/nlohmann/detail/input/: binary_reader.hpp
source/: consumer.cpp  data-fetcher.cpp  database-manager.cpp  electricity-data.cpp  json-parser.cpp
src/: application.cpp  circle.cpp  data-processor.cpp  database-manager.cpp  electricity-data.cpp  input-handler.cpp  offline-fetching-strategy.cpp  offline-loading-strategy.cpp  online-fetching-strategy.cpp  online-loading-strategy.cpp  periodic-updater.cpp  saved-user-info-manager.cpp  shutdown-circle.cpp  shutdown-data.cpp  shutdown-info.cpp  state-manager.cpp  ui-manager.cpp  user-record-manager.cpp  utility.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
tests/: test_database_manager.cpp  test_shutdown_data.cpp
